sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
	var swap=true
		for(i<-getNombrevaleurs()-2 to 0 by -1){
			for(j<-0 to i){
					swap=false
						if(pluspetit(j+1,j)){
				     		echange(j,j+1)
				     			swap=true
			}
		}
		
	}
		
}
